# lancelot

./: CHANGELOG.md  CLAUDE.md  Gemfile  README.md  Rakefile  lancelot.gemspec
.github/workflows/: ci.yml
examples/: basic_usage.rb  full_text_search.rb  idempotent_create.rb  optional_fields_demo.rb  red_candle_integration.rb  text_search.rb  vector_search.rb
ext/lancelot/: .gitignore  Cargo.toml  extconf.rb
ext/lancelot/src/: conversion.rs  dataset.rs  lib.rs  schema.rs
lib/: lancelot.rb
lib/lancelot/: dataset.rb  rank_fusion.rb  version.rb
sig/: lancelot.rbs
spec/: lancelot_spec.rb  spec_helper.rb
spec/lancelot/: dataset_spec.rb  rank_fusion_spec.rb
